@@ -301,6 +301,18 @@ public class PythonTranslateVisitor extends AbstractTranslateVisitor {
     }
 
     @Override
+    public Void visitUuidLiteral(final GremlinParser.UuidLiteralContext ctx) {
+        if (ctx.stringLiteral() == null) {
+            sb.append("uuid.uuid4()");
+            return null;
+        }
+        sb.append("uuid.UUID(");
+        visitStringLiteral(ctx.stringLiteral());
+        sb.append(")");
+        return null;
+    }
+
+    @Override
     protected String getCardinalityFunctionClass() {
         return "CardinalityValue";
     }
