@@ -432,6 +432,12 @@ public class TranslateVisitor extends GremlinBaseVisitor<Void> {
     }
 
     @Override
+    public Void visitUuidLiteral(final GremlinParser.UuidLiteralContext ctx) {
+        sb.append(ctx.getText());
+        return null;
+    }
+
+    @Override
     public Void visitVariable(final GremlinParser.VariableContext ctx) {
         final String var = ctx.getText();
         sb.append(var);
