@@ -151,6 +151,24 @@ public class GremlinTranslatorTest {
                             null,
                             "g.with_(\"x\")",
                             "g.with_('x')"},
+                    {"g.inject(UUID(\"f47af10b-58cc-4372-a567-0f02b2f3d479\"))",
+                            null,
+                            "g.inject(string0)",
+                            "g.Inject<object>(Guid.Parse(\"f47af10b-58cc-4372-a567-0f02b2f3d479\"))",
+                            "g.Inject(uuid.MustParse(\"f47af10b-58cc-4372-a567-0f02b2f3d479\"))",
+                            null,
+                            null,
+                            "g.inject(\"f47af10b-58cc-4372-a567-0f02b2f3d479\")",
+                            "g.inject(uuid.UUID('f47af10b-58cc-4372-a567-0f02b2f3d479'))"},
+                    {"g.inject(UUID())",
+                            null,
+                            "g.inject(string0)",
+                            "g.Inject<object>(Guid.NewGuid())",
+                            "g.Inject(uuid.New())",
+                            null,
+                            null,
+                            "g.inject(uuid.v4())",
+                            "g.inject(uuid.uuid4())"},
                     {"g.with(\"x\n\\\"yz\")",
                             null,
                             "g.with(string0)",
