@@ -37,6 +37,7 @@ import (
 
 	gremlingo "github.com/apache/tinkerpop/gremlin-go/v3/driver"
 	"github.com/cucumber/godog"
+	"github.com/google/uuid"
 )
 
 type tinkerPopGraph struct {
@@ -50,6 +51,7 @@ func init() {
 	parsers = map[*regexp.Regexp]func(string, string) interface{}{
 		regexp.MustCompile(`^str\[(.*)]$`):        func(stringVal, graphName string) interface{} { return stringVal }, //returns the string value as is
 		regexp.MustCompile(`^dt\[(.*)]$`):         toDateTime,
+		regexp.MustCompile(`^uuid\[(.*)]$`):       toUuid,
 		regexp.MustCompile(`^d\[(.*)]\.[bslfd]$`): toNumeric,
 		regexp.MustCompile(`^d\[(.*)]\.[m]$`):     toBigDecimal,
 		regexp.MustCompile(`^d\[(.*)]\.[n]$`):     toBigInt,
@@ -118,6 +120,15 @@ func toDateTime(stringVal, graphName string) interface{} {
 	// go doesn't expose getting the abbreviated zone names from offset despite parsing into them, so we'll need
 	// to update the location into UTC+/-HH:SS format for evaluation purposes
 	return val.In(gremlingo.GetTimezoneFromOffset(os))
+}
+
+// Parse uuid.
+func toUuid(stringVal, graphName string) interface{} {
+	val, err := uuid.Parse(stringVal)
+	if err != nil {
+		return nil
+	}
+	return val
 }
 
 // Parse numeric.
